DataGridSample: add PowerFx/Excel samples and model demos

--- a/src/DataGridSample/DataGridSample.csproj
+++ b/src/DataGridSample/DataGridSample.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Avalonia.Themes.Fluent" />
     <PackageReference Include="Avalonia.ReactiveUI" />
     <PackageReference Include="DynamicData" />
+    <PackageReference Include="Microsoft.PowerFx.Interpreter" />
   </ItemGroup>
 
   <ItemGroup>
