--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,6 +18,7 @@
     <PackageVersion Include="Avalonia.Themes.Fluent" Version="$(AvaloniaVersion)" />
     <PackageVersion Include="Avalonia.Themes.Simple" Version="11.3.9" />
     <PackageVersion Include="DynamicData" Version="9.4.1" />
+    <PackageVersion Include="Microsoft.PowerFx.Interpreter" Version="1.4.0" />
     <PackageVersion Include="System.Reactive" Version="6.0.1" />
   </ItemGroup>
   <!-- Build tooling -->
