Integrate formula engine into DataGrid

--- a/src/ProDiagnostics/ProDiagnostics.csproj
+++ b/src/ProDiagnostics/ProDiagnostics.csproj
@@ -40,6 +40,11 @@
     <PackageReference Include="Avalonia.Themes.Simple" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\\ProDataGrid.FormulaEngine\\ProDataGrid.FormulaEngine.csproj" />
+    <ProjectReference Include="..\\ProDataGrid.FormulaEngine.Excel\\ProDataGrid.FormulaEngine.Excel.csproj" />
+  </ItemGroup>
+
   <Import Project="../../build/SharedVersion.props" />
 
   <ItemGroup>
