--- a/src/Avalonia.Controls.DataGrid/Avalonia.Controls.DataGrid.csproj
+++ b/src/Avalonia.Controls.DataGrid/Avalonia.Controls.DataGrid.csproj
@@ -23,6 +23,11 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\\ProDataGrid.FormulaEngine\\ProDataGrid.FormulaEngine.csproj" />
+    <ProjectReference Include="..\\ProDataGrid.FormulaEngine.Excel\\ProDataGrid.FormulaEngine.Excel.csproj" />
+  </ItemGroup>
+
   <ItemGroup Label="InternalsVisibleTo">
     <InternalsVisibleTo Include="Avalonia.Controls.DataGrid.UnitTests, PublicKey=$(AvaloniaPublicKey)" />
     <InternalsVisibleTo Include="Avalonia.Controls.DataGrid.LeakTests, PublicKey=$(AvaloniaPublicKey)" />
